after applying a boolean mod, faces are initialized with a facemap index of 0 instead of -1 #65357

Closed
opened 2019-05-31 17:32:50 +02:00 by MACHIN3 · 13 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: version: 2.80 (sub 73), branch: blender2.7, commit date: 2019-05-30 22:28, hash: fc336f973d

Short description of error
I have an object, that has a facemap (and faces assgined to it). Alternatively I have on object and have run bm.faces.layers.face_map.verify() on its mesh (even without the object having any face map).
If I then add a boolean mod to either of them, and use a second, new object, where face maps were never touched, and if I then apply the boolean mod, the faces of the new object will have a face map index of 0 on the new, booleaned mesh.
This then leads to the new faces being associated with a facemap they haven't been a part of before. The face map indices of the new faces should stay at -1, as they were before the boolean.

video demo

faces_after_boolean_are_initialized_with_index_0_instead_of_-1.blend

Exact steps for others to reproduce the error

  • open the blend file above
  • apply the boolean mod on the cube to the right
    • go into edit mode and select the face map
    • the new faces are part of the pre-existing face map, despite thefact that this face map did not exist on the (second) object and the faces haven't ben assigned to any face map
  • apply the boolean mod on the cube to the left
    • go into edti mode, create a new face map and select its faces
    • the new faces are part of the new face map, without having been assigned to it
**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: version: 2.80 (sub 73), branch: blender2.7, commit date: 2019-05-30 22:28, hash: `fc336f973d` **Short description of error** I have an object, that has a facemap (and faces assgined to it). Alternatively I have on object and have run `bm.faces.layers.face_map.verify()` on its mesh (even without the object having any face map). If I then add a boolean mod to either of them, and use a second, new object, where face maps were never touched, and if I then apply the boolean mod, the faces of the new object will have a face map index of 0 on the new, booleaned mesh. This then leads to the new faces being associated with a facemap they haven't been a part of before. The face map indices of the new faces should stay at -1, as they were before the boolean. [video demo ](https://www.youtube.com/watch?v=0mk5lwoEMMk) [faces_after_boolean_are_initialized_with_index_0_instead_of_-1.blend](https://archive.blender.org/developer/F7081376/faces_after_boolean_are_initialized_with_index_0_instead_of_-1.blend) **Exact steps for others to reproduce the error** * open the blend file above * apply the boolean mod on the cube to the right * go into edit mode and select the face map * the new faces are part of the pre-existing face map, despite thefact that this face map did not exist on the (second) object and the faces haven't ben assigned to any face map * apply the boolean mod on the cube to the left * go into edti mode, create a new face map and select its faces * the new faces are part of the new face map, without having been assigned to it
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3

Added subscriber: @Teds

Added subscriber: @Teds

Confirmed, I get the same weird behaviour on Windows 10 64bit, Nvidia GeForce GTX 1080Ti, Blender 2.80 Beta Windows 64 bit Date: 2019-06-01 22:51 Hash: 079c7f918c

Confirmed, I get the same weird behaviour on Windows 10 64bit, Nvidia GeForce GTX 1080Ti, Blender 2.80 Beta Windows 64 bit Date: 2019-06-01 22:51 Hash: 079c7f918c81

Added subscriber: @ostapblender

Added subscriber: @ostapblender

Yup, exactly the same behavior in 079c7f918c on Windows

Yup, exactly the same behavior in 079c7f918c81 on Windows

Added subscriber: @Pinnhead

Added subscriber: @Pinnhead

Confirmed. blender-2.80-079c7f918c81-win64. Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Confirmed. blender-2.80-079c7f918c81-win64. Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Added subscriber: @AnadinX

Added subscriber: @AnadinX

Confirmed on macOS, built with latest from lastnight
version: 2.80 (sub 74), branch: master, commit date: 2019-06-02 11:23, hash: 8d1666fc6d, type: Release

AMD Radeon Pro 560

Confirmed on macOS, built with latest from lastnight version: 2.80 (sub 74), branch: master, commit date: 2019-06-02 11:23, hash: 8d1666fc6de1, type: Release AMD Radeon Pro 560
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by be52b25d39

This issue was referenced by be52b25d3953696a775be9d2dae32cf713369e7c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65357
No description provided.