Fix T65357: wrong facemap indices after applying a boolean modifier

Properly initialize custom data layers to default values when copying from
a mesh that does not have all the same layers.

Differential Revision: https://developer.blender.org/D5003